# peetsfea2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: HANDOFF.md  long_term_plan.md  tv_wpt_coil_spec.md
examples/: type1.toml
src/peetsfea/: __init__.py  cli.py  dataset_cli.py  logging_utils.py
src/peetsfea/aedt/: __init__.py  maxwell3d_adapter.py
src/peetsfea/codegen/: __init__.py
src/peetsfea/config/: type1_loader.py
src/peetsfea/domain/: __init__.py  errors.py
src/peetsfea/domain/type1/: __init__.py  interpreter.py  parse.py  sampled_models.py  spec_models.py
src/peetsfea/geometry/: __init__.py  plan.py
src/peetsfea/geometry/type1/: __init__.py  builder.py  layer_modes.py  pcb_faces.py  self_contact.py  spiral_mask.py  topology.py  tx_coil_3d.py
src/peetsfea/pipeline/: __init__.py  dataset.py  runner.py  serialize.py
src/peetsfea/sampling/: __init__.py  rng.py  type1_sampler.py
src/peetsfea/spec/: __init__.py  io.py
